test/errors/type/collections/set/__band2.yasl
echo collections.set().__band(1, collections.set())
