test/errors/type/collections/set/__band2.yasl.err
TypeError: collections.set.__band expected arg in position 0 to be of type set, got arg of type int. (line 1)
